Prevent double-tap zoom on mobiles
Prevents zoom when mobile users click multiple times on an open note
to adjust the tuning

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html {
   max-height: 100vh;
   max-width: 100vw;
   background-color: #0e5394;
+  touch-action: manipulation;
 }
 main {
   position: relative;
